# dlm-probing

./: .gitignore  CLAUDE.md  README.md  REVIEW.md  modal_seed_rerank.py  proposal.md  pyproject.toml  result.md  review.md  todo.md  verify.txt
acl_srw_paper/latex/: acl_latex.fdb_latexmk  acl_latex.out  acl_latex.tex  acl_lualatex.fls
acl_srw_paper/poster/: _check_footer.py  _check_row_align.py  _check_widths.py  poster.aux  poster.fdb_latexmk  poster.fls  poster.tex  verify_layout.py
emnlp_paper/figures/: fig2_bootstrap_ci.json
emnlp_paper/latex/: acl_latex.aux  acl_latex.bbl  acl_latex.blg  acl_latex.fdb_latexmk  acl_latex.fls  acl_latex.out  acl_latex.tex  acl_lualatex.fdb_latexmk  custom.bib
emnlp_paper/scripts/: README.md  analyze_trajectory.py  gen_paper_figures.py
paper/: entropy_baseline_results.md
paper/latex/: acl_latex.aux  acl_latex.bbl  acl_latex.blg  acl_latex.fdb_latexmk  acl_latex.fls  acl_latex.out  acl_latex.tex  acl_lualatex.aux  acl_lualatex.fdb_latexmk  acl_lualatex.fls  custom.bib
scripts/: analyze_ardlm_layers.py  analyze_difficulty_hypothesis.py
src/: compare_entropy_baseline.py  gen_figures.py  modal_adaptive_compute_sim.py  modal_ar_probe.py  modal_early_exit_sim.py  modal_format_features.py  modal_length_control_probe.py  modal_length_corr.py  modal_length_stratified_probe.py  modal_midstep_probe.py  modal_nested_cv.py  modal_probe_with_std.py  modal_prompt_length_probe.py  modal_region_ablation.py  modal_shuffle_baseline.py
src/ablations/: modal_length_ablation_probe.py  modal_region_ablation.py
src/core/: modal_ar_probe.py  (+3 more)
(+37 files in other folders)
